--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,20 @@
             "role": "Developer"
         }
     ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/ipublishingjp/result"
+        }
+    ],
     "require": {
-        "php": ">=5.5.0",
-        "guzzlehttp/guzzle": "6.*",
-        "snscripts/result": "1.0.*"
+        "php": ">=7.2.0",
+        "guzzlehttp/guzzle": "7.*",
+        "snscripts/result": "dev-master"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.0",
-        "squizlabs/php_codesniffer": "~2.0"
+        "phpunit/phpunit": "~8.0",
+        "squizlabs/php_codesniffer": "~3.0"
     },
     "autoload": {
         "psr-4": {
