--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "require": {
         "php": ">=7.2.0",
         "guzzlehttp/guzzle": "7.*",
-        "snscripts/result": "dev-master"
+        "snscripts/result": "1.0.*"
     },
     "require-dev": {
         "phpunit/phpunit": "~8.0",
