--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "snscripts/itc-reporter",
+    "name": "ipublishingjp/itc-reporter",
     "description": "PHP package for downloading stats from iTunes Connect - Replacement for Apples Java based Reporter.jar",
     "keywords": ["iTunes", "Connect", "Reporter.jar", "App Stats"],
     "homepage": "https://github.com/mikebarlow/itc-reporter",
