--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "php": ">=7.2.0",
         "ext-simplexml": "*",
         "guzzlehttp/guzzle": "6.*",
-        "snscripts/result": "dev-master",
+        "snscripts/result": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "~8.0",
